apps/base/traefik/dashboard_ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`dashboard.kubernetes.midnightthoughts.space`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: midnightthoughts-tls-secret
    domains:
      - main: dashboard.kubernetes.midnightthoughts.space
